gccida/g0/gen_block_die
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_block_die/src/dwarf2out.c:11717:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v3; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_block_die/src/dwarf2out.c:11718:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_block_die/src/dwarf2out.c:11719:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code origin_code; // [rsp+2Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_block_die/src/dwarf2out.c:11755:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_block_die/src/obj/dwarf2out.o] Error 1
